# cube_slam_cnn_project

./: README.md
cnn_python/: Resnet18.py  data_distribution.py  loss_plot.py  readme.md  shiftnet.py
cube_slam_cnn_ws/src/cube_slam_cnn/: CMakeLists.txt  README.md  package.xml
cube_slam_cnn_ws/src/cube_slam_cnn/data/20200920_test/: online_camera.txt  online_camera_small.txt  online_cubes.txt  online_cubes_small.txt
cube_slam_cnn_ws/src/cube_slam_cnn/data/data_bbox_modify/: online_camera.txt  online_cubes.txt
cube_slam_cnn_ws/src/cube_slam_cnn/data/data_global/: previous_obj_poses_gt_global.txt  previous_obj_poses_gt_local.txt  previous_obj_poses_gt_manual.txt
cube_slam_cnn_ws/src/cube_slam_cnn/data/data_original/: online_camera.txt
cube_slam_cnn_ws/src/cube_slam_cnn/launch/: object_slam.launch  object_slam_example.launch
cube_slam_cnn_ws/src/cube_slam_cnn/src/: main_obj.cpp
detect_3d_cuboid/: CMakeLists.txt  README.md
detect_3d_cuboid/src/: box_proposal_detail.cpp  main.cpp  object_3d_util.cpp
sample_object/: CMakeLists.txt  README.md
sample_object/data/: 0000_3d_cuboids.txt
sample_object/include/detect_3d_cuboid/: detect_3d_cuboid.h
sample_object/sample_object_1/: CMakeLists.txt
sample_object/sample_object_1/data/: 0000_3d_cuboids.txt
sample_object/sample_object_1/data/ground_truth_gt/label_2/: 0000_save_obj_poses.txt  0001_save_obj_poses.txt  0002_save_obj_poses.txt  0003_save_obj_poses.txt  0004_save_obj_poses.txt  0005_save_obj_poses.txt  0006_save_obj_poses.txt  0007_save_obj_poses.txt  0008_save_obj_poses.txt  0009_save_obj_poses.txt  0010_save_obj_poses.txt  0011_save_obj_poses.txt  0012_save_obj_poses.txt  0013_save_obj_poses.txt  0014_save_obj_poses.txt  0015_save_obj_poses.txt  0016_save_obj_poses.txt  0017_save_obj_poses.txt  0018_save_obj_poses.txt  0019_save_obj_poses.txt  0020_save_obj_poses.txt  0021_save_obj_poses.txt  0022_save_obj_poses.txt  0023_save_obj_poses.txt  0024_save_obj_poses.txt  0025_save_obj_poses.txt  0026_save_obj_poses.txt  0027_save_obj_poses.txt  0028_save_obj_poses.txt  0029_save_obj_poses.txt  0030_save_obj_poses.txt  0031_save_obj_poses.txt  0032_save_obj_poses.txt  0033_save_obj_poses.txt  0034_save_obj_poses.txt  0035_save_obj_poses.txt  0036_save_obj_poses.txt  0037_save_obj_poses.txt  0038_save_obj_poses.txt  0039_save_obj_poses.txt  (+19 more)
sample_object/sample_object_1/data/online_data/: online_cubes.txt
sample_object/sample_object_1/include/sample_object/: sample_object.h
sample_object/sample_object_1/src/: iou.cpp  main_sample_object.cpp  sample_object.cpp
sample_object/src/: box_proposal_detail (copy).cpp  box_proposal_detail.cpp  main_sample_ground_truth.cpp  main_sample_random.cpp  object_3d_util.cpp
score_3d_cuboid/: CMakeLists.txt  README.md
score_3d_cuboid/data/data_save/selected by IoU/: online_cubes.txt
score_3d_cuboid/data/data_save/selected by MSE/: online_camera.txt  online_cubes.txt
score_3d_cuboid/src/: box_proposal_detail.cpp  main.cpp  main_score_cuboid.cpp  object_3d_util.cpp
